Version 5.1. 24 April 2017 - xxx edition

Added menu movement with mouse


Version 5.0. 21 April 2017 - Chase H.Q. edition

Finally I have succeded emulating Sinclair QL. I dedicated a lot of hours trying to guess how the keyboard work.
There is little documentation and I had to do lots of dissassemblies of the ROM and testing keyboard to know how it work...
So, hard work, this is a Quantum Leap, so this is a new major version, 5.0!
Complete changelog:

Added Sinclair QL emulation
Added remote command protocol. You can do enhanced debugging on ZEsarUX by using a telnet client. 
  There are a lot of commands, even many commands exclusive to this protocol and not found on the GUI, like:
* load-source-code
* hexdump-internal
* set-register

Added Easter Egg ;)
Added Specdrum emulation
Added RZX playback support
Added Multiface One, 128 and Three emulation
Added setting to write configuration file
Added menu item to reload IDE and MMC contents from file. You can now modify a used file outside the emulator and reload its contents
Added autosave snapshot at fixed interval
Added hardware debug port to output ascii characters or numbers directly on host console
Added two unused ports from the ZXI pool for some internal ZEsarUX features. See docs/zesarux_zxi_registers.txt 
Added Hotswap from 128k to +2A, and +2A to 128k
Added File Viewer 
Added support for drag&drop on Mac OS X, SDL2
Added support for OpenGL rendering on Mac OS X Cocoa driver
Added drawn piano for AY Piano menu setting (on all video drivers except text drivers)
Added Man Software GUI Style
Added setting to change DivIDE/DivMMC eprom firmware file
Added setting to allow writing to DivIDE/DivMMC eprom firmware
Added setting to disable autoframeskip
Added setting to set breakpoints from command line
Added setting to deny changing turbo mode when booting ZX-Uno and on bios
Added setting to disable beeper
Improved Debug CPU Window: now you can switch between different views: 